update transfer-limits api
